criação formulario cadastro

--- a/index.html
+++ b/index.html
@@ -47,7 +47,35 @@
                                 </h2>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Login goodpay (Conteudo)</div>
+                                    <div class="accordion-body">
+                                        <!-- FORM LOGIN - INICIO -->
+                                        <form>
+                                            <div class="input-group input-group-lg mb-3">
+                                                <span class="input-group-text"
+                                                    id="inputGroup-sizing-default">Email</span>
+                                                <input id="email" type="text" required class="form-control"
+                                                    aria-label="Sizing example input"
+                                                    aria-describedby="inputGroup-sizing-default" />
+                                            </div>
+                                            <div class="input-group input-group-lg mb-3">
+                                                <span class="input-group-text"
+                                                    id="inputGroup-sizing-default">Senha</span>
+                                                <input id="senha" type="password" required class="form-control"
+                                                    aria-label="Sizing example input"
+                                                    aria-describedby="inputGroup-sizing-default" />
+                                            </div>
+                                            <div class="d-grid gap-2">
+                                                <button id="btn-entrar" type="button" class="btn btn-outline-success">
+                                                    Entrar
+                                                </button>
+                                                <button class="btn btn-outline-dark" type="button">
+                                                    Cadastrar
+                                                </button>
+                                            </div>
+                                        </form>
+                                        <!-- FORM LOGIN - FIM-->
+
+                                    </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -118,7 +146,9 @@
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque similique magnam facilis dolor. Esse assumenda reprehenderit, aliquid vero tenetur soluta error quas reiciendis rerum veniam voluptatum nemo deserunt ea eos.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque similique magnam facilis
+                                dolor. Esse assumenda reprehenderit, aliquid vero tenetur soluta error quas reiciendis
+                                rerum veniam voluptatum nemo deserunt ea eos.
                             </p>
                         </div>
                     </div>
@@ -130,7 +160,9 @@
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate id reprehenderit ex hic maxime perspiciatis aliquid repellendus voluptatibus eligendi quia consequuntur minima in, ipsam expedita accusamus unde voluptates dolorem dolorum?
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate id reprehenderit ex
+                                hic maxime perspiciatis aliquid repellendus voluptatibus eligendi quia consequuntur
+                                minima in, ipsam expedita accusamus unde voluptates dolorem dolorum?
                             </p>
                         </div>
                     </div>
@@ -142,7 +174,9 @@
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur reiciendis error modi eligendi ipsa est repellendus, sed ipsum pariatur iste saepe delectus aliquam enim accusamus. A eum impedit assumenda quasi?
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur reiciendis error
+                                modi eligendi ipsa est repellendus, sed ipsum pariatur iste saepe delectus aliquam enim
+                                accusamus. A eum impedit assumenda quasi?
                             </p>
                         </div>
                     </div>
@@ -154,7 +188,9 @@
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum cupiditate temporibus maxime laboriosam ut, voluptatum, earum illum veritatis, aspernatur quibusdam omnis. Aperiam veritatis quibusdam ab repellendus asperiores fugit repudiandae mollitia!
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum cupiditate temporibus
+                                maxime laboriosam ut, voluptatum, earum illum veritatis, aspernatur quibusdam omnis.
+                                Aperiam veritatis quibusdam ab repellendus asperiores fugit repudiandae mollitia!
                             </p>
                         </div>
                     </div>
@@ -177,7 +213,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
